--- a/404.html
+++ b/404.html
@@ -22,12 +22,12 @@
 				document.documentElement.classList.toggle('dark', true);
 			}
     </script>
-    <title>djs-message-commands v1.1.0</title><meta name="description" content="Build easy, safe, and testable message commands for discord.js">
-    <link rel="modulepreload" href="/djs-message-commands/assets/app.b249c43b.js"><link rel="modulepreload" href="/djs-message-commands/assets/404.html.f166316b.js"><link rel="modulepreload" href="/djs-message-commands/assets/404.html.bee13de6.js"><link rel="modulepreload" href="/djs-message-commands/assets/plugin-vue_export-helper.21dcd24c.js">
+    <title>djs-message-commands v1.2.0</title><meta name="description" content="Build easy, safe, and testable message commands for discord.js">
+    <link rel="modulepreload" href="/djs-message-commands/assets/app.18c4f02f.js"><link rel="modulepreload" href="/djs-message-commands/assets/404.html.f166316b.js"><link rel="modulepreload" href="/djs-message-commands/assets/404.html.bee13de6.js"><link rel="modulepreload" href="/djs-message-commands/assets/plugin-vue_export-helper.21dcd24c.js">
     <link rel="stylesheet" href="/djs-message-commands/assets/style.695abcff.css">
   </head>
   <body>
-    <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>How did we get here?</blockquote><a href="/djs-message-commands/" class="">Take me home</a></div></div><!----><!--]--></div>
-    <script type="module" src="/djs-message-commands/assets/app.b249c43b.js" defer></script>
+    <div id="app"><!--[--><div class="theme-container"><div class="theme-default-content"><h1>404</h1><blockquote>There&#39;s nothing here.</blockquote><a href="/djs-message-commands/" class="">Take me home</a></div></div><!----><!--]--></div>
+    <script type="module" src="/djs-message-commands/assets/app.18c4f02f.js" defer></script>
   </body>
 </html>
